# cpp-image-classifier

./: CMakeLists.txt  main.cpp
